feat: validate request and bind to model
