# docs/swagger.json
@@ -12,6 +12,32 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/comments": {
+            "post": {
+                "description": "Create new bitcoin transaction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Create new transaction",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Transaction"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Ping server for health check",
@@ -32,6 +58,26 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Transaction": {
+            "type": "object",
+            "required": [
+                "amount",
+                "datetime"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "datetime": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
                 }
             }
         }
